force-app/main/default/objects/Implementation_Milestone_Template__mdt/Implementation_Milestone_Template__mdt.object-meta.xml
<CustomObject><label
  >Implementation Milestone Template</label><pluralLabel
  >Implementation Milestone Templates</pluralLabel><visibility
  >Public</visibility></CustomObject>