force-app/main/default/objects/Implementation_Milestone_Template__mdt/fields/Blocking__c.field-meta.xml
<CustomField>
    <fullName>Blocking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocking</label>
    <type>Checkbox</type>
</CustomField>