force-app/main/default/objects/Implementation_Milestone_Template__mdt/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>