force-app/main/default/objects/Implementation_Milestone_Template__mdt/fields/Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Offset_Days__c</fullName>
    <label>Offset Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>